--- a/themes/EasyRSA.qss
+++ b/themes/EasyRSA.qss
@@ -1,21 +1,4 @@
-/* /////////////////////////////////////////////////////////////////////////////////////////////////
-
-SET APP STYLESHEET - FULL STYLES HERE
-DARK THEME - DRACULA COLOR BASED
-
-# BY: WANDERSON M.PIMENTA
-# PROJECT MADE WITH: Qt Designer and PySide6
-# V: 1.0.0
-#
-# This project can be used freely for all uses, as long as they maintain the
-# respective credits only in the Python scripts, any information in the visual
-# interface (GUI) can be modified without any implication.
-#
-# There are limitations on Qt licenses if you want to use your products
-# commercially, I recommend reading them on the official website:
-# https://doc.qt.io/qtforpython/licenses.html
-
-///////////////////////////////////////////////////////////////////////////////////////////////// */
+/* Halloween Stylesheet */
 
 QWidget{
 	color: rgb(221, 221, 221);
@@ -26,13 +9,13 @@ QWidget{
 Tooltip */
 QToolTip {
 	color: #ffffff;
-	background-color: rgba(33, 37, 43, 180);
-	border: 1px solid rgb(44, 49, 58);
+	background-color: rgba(35,35,38, 180);
+	border: 1px solid rgb(35,35,38);
 	background-image: none;
 	background-position: left center;
     background-repeat: no-repeat;
 	border: none;
-	border-left: 2px solid rgb(255, 121, 198);
+	border-left: 2px solid rgb(0,94,217);
 	text-align: left;
 	padding-left: 8px;
 	margin: 0px;
@@ -40,27 +23,27 @@ QToolTip {
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Bg App */
-#bgApp {	
-	background-color: rgb(40, 44, 52);
-	border: 1px solid rgb(44, 49, 58);
+#bgApp {
+	background-color: rgb(11,11,11);
+	border: 1px solid rgb(35,35,38);
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Left Menu */
-#leftMenuBg {	
-	background-color: rgb(33, 37, 43);
+#leftMenuBg {
+	background-color: rgb(35,35,38);
 }
 #topLogo {
-	background-color: rgb(33, 37, 43);
-	background-image: url(:/images/images/images/PyDracula.png);
-	background-position: centered;
+	background-color: rgb(35,35,38);
+	background-image: url(:/images/images/images/RSA30x30.png);
+	background-position: center;
 	background-repeat: no-repeat;
 }
 #titleLeftApp { font: 63 12pt "Segoe UI Semibold"; }
-#titleLeftDescription { font: 8pt "Segoe UI"; color: rgb(189, 147, 249); }
+#titleLeftDescription { font: 8pt "Segoe UI"; color: rgb(32, 124, 245); }
 
 /* MENUS */
-#topMenu .QPushButton {	
+#topMenu .QPushButton {
 	background-position: left center;
     background-repeat: no-repeat;
 	border: none;
@@ -70,13 +53,13 @@ Left Menu */
 	padding-left: 44px;
 }
 #topMenu .QPushButton:hover {
-	background-color: rgb(40, 44, 52);
+	background-color: rgb(11,11,11);
 }
-#topMenu .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+#topMenu .QPushButton:pressed {
+	background-color: rgb(32, 124, 245);
 	color: rgb(255, 255, 255);
 }
-#bottomMenu .QPushButton {	
+#bottomMenu .QPushButton {
 	background-position: left center;
     background-repeat: no-repeat;
 	border: none;
@@ -86,14 +69,14 @@ Left Menu */
 	padding-left: 44px;
 }
 #bottomMenu .QPushButton:hover {
-	background-color: rgb(40, 44, 52);
+	background-color: rgb(11,11,11);
 }
-#bottomMenu .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+#bottomMenu .QPushButton:pressed {
+	background-color: rgb(32, 124, 245);
 	color: rgb(255, 255, 255);
 }
 #leftMenuFrame{
-	border-top: 3px solid rgb(44, 49, 58);
+	border-top: 3px solid rgb(35,35,38);
 }
 
 /* Toggle Button */
@@ -108,10 +91,10 @@ Left Menu */
 	color: rgb(113, 126, 149);
 }
 #toggleButton:hover {
-	background-color: rgb(40, 44, 52);
+	background-color: rgb(11,11,11);
 }
 #toggleButton:pressed {
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(32, 124, 245);
 }
 
 /* Title Menu */
@@ -120,11 +103,11 @@ Left Menu */
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Extra Tab */
-#extraLeftBox {	
-	background-color: rgb(44, 49, 58);
+#extraLeftBox {
+	background-color: rgb(35,35,38);
 }
-#extraTopBg{	
-	background-color: rgb(189, 147, 249)
+#extraTopBg {
+	background-color: rgb(32, 124, 245);
 }
 
 /* Icon */
@@ -139,12 +122,12 @@ Extra Tab */
 
 /* Btn Close */
 #extraCloseColumnBtn { background-color: rgba(255, 255, 255, 0); border: none;  border-radius: 5px; }
-#extraCloseColumnBtn:hover { background-color: rgb(196, 161, 249); border-style: solid; border-radius: 4px; }
-#extraCloseColumnBtn:pressed { background-color: rgb(180, 141, 238); border-style: solid; border-radius: 4px; }
+#extraCloseColumnBtn:hover { background-color: rgb(87, 156, 247); border-style: solid; border-radius: 4px; }
+#extraCloseColumnBtn:pressed { background-color: rgb(46, 130, 240); border-style: solid; border-radius: 4px; }
 
 /* Extra Content */
 #extraContent{
-	border-top: 3px solid rgb(40, 44, 52);
+	border-top: 3px solid rgb(11,11,11);
 }
 
 /* Extra Top Menus */
@@ -158,20 +141,20 @@ background-position: left center;
 	padding-left: 44px;
 }
 #extraTopMenu .QPushButton:hover {
-	background-color: rgb(40, 44, 52);
+	background-color: rgb(11,11,11);
 }
-#extraTopMenu .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+#extraTopMenu .QPushButton:pressed {
+	background-color: rgb(32, 124, 245);
 	color: rgb(255, 255, 255);
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Content App */
-#contentTopBg{	
-	background-color: rgb(33, 37, 43);
+#contentTopBg{
+	background-color: rgb(35,35,38);
 }
 #contentBottom{
-	border-top: 3px solid rgb(44, 49, 58);
+	border-top: 3px solid rgb(35,35,38);
 }
 
 /* Top Buttons */
@@ -180,16 +163,16 @@ Content App */
 #rightButtons .QPushButton:pressed { background-color: rgb(23, 26, 30); border-style: solid; border-radius: 4px; }
 
 /* Theme Settings */
-#extraRightBox { background-color: rgb(44, 49, 58); }
-#themeSettingsTopDetail { background-color: rgb(189, 147, 249); }
+#extraRightBox { background-color: rgb(35,35,38); }
+#themeSettingsTopDetail { background-color: rgb(32, 124, 245); }
 
 /* Bottom Bar */
-#bottomBar { background-color: rgb(44, 49, 58); }
+#bottomBar { background-color: rgb(35,35,38); }
 #bottomBar QLabel { font-size: 11px; color: rgb(113, 126, 149); padding-left: 10px; padding-right: 10px; padding-bottom: 2px; }
 
 /* CONTENT SETTINGS */
 /* MENUS */
-#contentSettings .QPushButton {	
+#contentSettings .QPushButton {
 	background-position: left center;
     background-repeat: no-repeat;
 	border: none;
@@ -199,20 +182,20 @@ Content App */
 	padding-left: 44px;
 }
 #contentSettings .QPushButton:hover {
-	background-color: rgb(40, 44, 52);
+	background-color: rgb(11,11,11);
 }
-#contentSettings .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+#contentSettings .QPushButton:pressed {
+	background-color: rgb(32, 124, 245);
 	color: rgb(255, 255, 255);
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 QTableWidget */
-QTableWidget {	
+QTableWidget {
 	background-color: transparent;
 	padding: 10px;
 	border-radius: 5px;
-	gridline-color: rgb(44, 49, 58);
+	gridline-color: rgb(35,35,38);
 	border-bottom: 1px solid rgb(44, 49, 60);
 }
 QTableWidget::item{
@@ -222,23 +205,23 @@ QTableWidget::item{
 	gridline-color: rgb(44, 49, 60);
 }
 QTableWidget::item:selected{
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(32, 124, 245);
 }
 QHeaderView::section{
-	background-color: rgb(33, 37, 43);
+	background-color: rgb(35,35,38);
 	max-width: 30px;
-	border: 1px solid rgb(44, 49, 58);
+	border: 1px solid rgb(35,35,38);
 	border-style: none;
     border-bottom: 1px solid rgb(44, 49, 60);
     border-right: 1px solid rgb(44, 49, 60);
 }
-QTableWidget::horizontalHeader {	
-	background-color: rgb(33, 37, 43);
+QTableWidget::horizontalHeader {
+	background-color: rgb(35,35,38);
 }
 QHeaderView::section:horizontal
 {
-    border: 1px solid rgb(33, 37, 43);
-	background-color: rgb(33, 37, 43);
+    border: 1px solid rgb(35,35,38);
+	background-color: rgb(35,35,38);
 	padding: 3px;
 	border-top-left-radius: 7px;
     border-top-right-radius: 7px;
@@ -251,12 +234,12 @@ QHeaderView::section:vertical
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 LineEdit */
 QLineEdit {
-	background-color: rgb(33, 37, 43);
+	background-color: rgb(35,35,38);
 	border-radius: 5px;
-	border: 2px solid rgb(33, 37, 43);
+	border: 2px solid rgb(35,35,38);
 	padding-left: 10px;
 	selection-color: rgb(255, 255, 255);
-	selection-background-color: rgb(255, 121, 198);
+	selection-background-color: rgb(0,94,217);
 }
 QLineEdit:hover {
 	border: 2px solid rgb(64, 71, 88);
@@ -272,7 +255,7 @@ QPlainTextEdit {
 	border-radius: 5px;
 	padding: 10px;
 	selection-color: rgb(255, 255, 255);
-	selection-background-color: rgb(255, 121, 198);
+	selection-background-color: rgb(0,94,217);
 }
 QPlainTextEdit  QScrollBar:vertical {
     width: 8px;
@@ -297,9 +280,9 @@ QScrollBar:horizontal {
 	border-radius: 0px;
 }
 QScrollBar::handle:horizontal {
-    background: rgb(189, 147, 249);
+    background: rgb(32, 124, 245);
     min-width: 25px;
-	border-radius: 4px
+	border-radius: 4px;
 }
 QScrollBar::add-line:horizontal {
     border: none;
@@ -334,10 +317,10 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
     margin: 21px 0 21px 0;
 	border-radius: 0px;
  }
- QScrollBar::handle:vertical {	
-	background: rgb(189, 147, 249);
+ QScrollBar::handle:vertical {
+	background: rgb(32, 124, 245);
     min-height: 25px;
-	border-radius: 4px
+	border-radius: 4px;
  }
  QScrollBar::add-line:vertical {
      border: none;
@@ -379,7 +362,7 @@ QCheckBox::indicator:hover {
 }
 QCheckBox::indicator:checked {
     background: 3px solid rgb(52, 59, 72);
-	border: 3px solid rgb(52, 59, 72);	
+	border: 3px solid rgb(52, 59, 72);
 	background-image: url(:/icons/images/icons/cil-check-alt.png);
 }
 
@@ -397,7 +380,7 @@ QRadioButton::indicator:hover {
 }
 QRadioButton::indicator:checked {
     background: 3px solid rgb(94, 106, 130);
-	border: 3px solid rgb(52, 59, 72);	
+	border: 3px solid rgb(52, 59, 72);
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
@@ -405,7 +388,7 @@ ComboBox */
 QComboBox{
 	background-color: rgb(27, 29, 35);
 	border-radius: 5px;
-	border: 2px solid rgb(33, 37, 43);
+	border: 2px solid rgb(35,35,38);
 	padding: 5px;
 	padding-left: 10px;
 }
@@ -415,19 +398,19 @@ QComboBox:hover{
 QComboBox::drop-down {
 	subcontrol-origin: padding;
 	subcontrol-position: top right;
-	width: 25px; 
+	width: 25px;
 	border-left-width: 3px;
 	border-left-color: rgba(39, 44, 54, 150);
 	border-left-style: solid;
 	border-top-right-radius: 3px;
-	border-bottom-right-radius: 3px;	
+	border-bottom-right-radius: 3px;
 	background-image: url(:/icons/images/icons/cil-arrow-bottom.png);
 	background-position: center;
-	background-repeat: no-reperat;
+	background-repeat: no-repeat;
  }
 QComboBox QAbstractItemView {
-	color: rgb(255, 121, 198);	
-	background-color: rgb(33, 37, 43);
+	color: rgb(0,94,217);
+	background-color: rgb(35,35,38);
 	padding: 10px;
 	selection-background-color: rgb(39, 44, 54);
 }
@@ -444,7 +427,7 @@ QSlider::groove:horizontal:hover {
 	background-color: rgb(55, 62, 76);
 }
 QSlider::handle:horizontal {
-    background-color: rgb(189, 147, 249);
+    background-color: rgb(32, 124, 245);
     border: none;
     height: 10px;
     width: 10px;
@@ -452,10 +435,10 @@ QSlider::handle:horizontal {
 	border-radius: 5px;
 }
 QSlider::handle:horizontal:hover {
-    background-color: rgb(195, 155, 255);
+    background-color: rgb(255, 212, 155);
 }
 QSlider::handle:horizontal:pressed {
-    background-color: rgb(255, 121, 198);
+    background-color: rgb(0,94,217);
 }
 
 QSlider::groove:vertical {
@@ -468,7 +451,7 @@ QSlider::groove:vertical:hover {
 	background-color: rgb(55, 62, 76);
 }
 QSlider::handle:vertical {
-    background-color: rgb(189, 147, 249);
+    background-color: rgb(32, 124, 245);
 	border: none;
     height: 10px;
     width: 10px;
@@ -476,25 +459,25 @@ QSlider::handle:vertical {
 	border-radius: 5px;
 }
 QSlider::handle:vertical:hover {
-    background-color: rgb(195, 155, 255);
+    background-color: rgb(255, 212, 155);
 }
 QSlider::handle:vertical:pressed {
-    background-color: rgb(255, 121, 198);
+    background-color: rgb(0,94,217);
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 CommandLinkButton */
-QCommandLinkButton {	
-	color: rgb(255, 121, 198);
+QCommandLinkButton {
+	color: rgb(0,94,217);
 	border-radius: 5px;
 	padding: 5px;
 }
-QCommandLinkButton:hover {	
+QCommandLinkButton:hover {
 	color: rgb(255, 170, 255);
 	background-color: rgb(44, 49, 60);
 }
-QCommandLinkButton:pressed {	
-	color: rgb(189, 147, 249);
+QCommandLinkButton:pressed {
+	color: rgb(32, 124, 245);
 	background-color: rgb(52, 58, 71);
 }
 
@@ -502,17 +485,14 @@ QCommandLinkButton:pressed {
 Button */
 #pagesContainer QPushButton {
 	border: 2px solid rgb(52, 59, 72);
-	border-radius: 5px;	
+	border-radius: 5px;
 	background-color: rgb(52, 59, 72);
 }
 #pagesContainer QPushButton:hover {
 	background-color: rgb(57, 65, 80);
 	border: 2px solid rgb(61, 70, 86);
 }
-#pagesContainer QPushButton:pressed {	
+#pagesContainer QPushButton:pressed {
 	background-color: rgb(35, 40, 49);
 	border: 2px solid rgb(43, 50, 61);
 }
-
-
-
